--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,21 @@
 :root {
-    /* Paleta de colores */
+    /* Paleta de Colores */
     --color-bg-main: #FFFBF5;
     --color-bg-secondary: #F7EFE5;
     --color-text: #4C3D3D;
-    --color-primary: #C3ACD0;
+    --color-primary: #7743DB; /* Usaremos el violeta como primario */
     --color-accent: #F5A6E6;
-    --color-accent-secondary: #7743DB;
 
-    /* Fuentes y estilos base */
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-
-    color-scheme: light;
-    color: var(--color-text);
-    background-color: var(--color-bg-main);
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    /* Trick para que 1rem = 10px */
+    font-size: 62.5%;
 }
 
 body {
     margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 32rem;
-    min-height: 100vh;
-    font-size: 1.6rem;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    font-size: 1.6rem; /* Tamaño de letra base de 16px */
+    color: var(--color-text);
+    background-color: var(--color-bg-main);
 }
